--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -10,7 +10,7 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary no-pad">
-    <a class="navbar-brand offset-1 alert-secondary bigger-block" href="landing page.html" ><h2>Weather Dashboard</h2></a>
+    <a class="navbar-brand offset-1 alert-secondary bigger-block" href="index.html" ><h2>Weather Dashboard</h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
