--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -57,7 +57,7 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
                 <h2>Visualizations</h2>
                     <div class = "row 2">
                         <div class = "col-6">
-                        <a href="max.html"><img src="assets/images/Fig1.png" alt="Max Temp" style="width:100%;height:90%;display:block;"></a>
+                        <a href="max.html"><img src="assets/images/Fig1.png" alt="Max Temp" style="width:800;height:90%;display:block;"></a>
                         </div>
                         <div class = "col-6">
                         <a href="humid.html"><img src="assets/images/Fig2.png" alt="Humidity" style="width:100%;height:90%;display:block;"></a>
