--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -47,7 +47,7 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
                 <h1>Summary: Weather Dashboard</h1>
                 <hr class = "my-4">
                 <p class="lead">
-                <img src="Fig1.png" alt="Max Temp" style="float:left;width:300px;height:250px;padding-right:10px;display:block;">
+                <img src="assets/images/Fig1.png" alt="Max Temp" style="float:left;width:300px;height:250px;padding-right:10px;display:block;">
                 In this project we visualized the weather of 500+ cities across the world of varying distance from the equator to answer a fundamental question: "What's the weather like as we approach the equator?"</p>
                 <p class ="lead">To accomplish this, a Python library and OpenWeatherMap API were utilized to create a representative model of weather across world cities.</p>
             </div>
@@ -86,8 +86,4 @@ integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNje
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         
         </body>
-<<<<<<< HEAD
         </html>
-=======
-        </html>
->>>>>>> 4d2f0c968a07c022a4aa6f8b432bba939abf6567
